--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -11,13 +11,13 @@ body {
 .div_2{
     width: 700px;
     height: 300px;
-    
     text-align: justify;
-    border:5px;
-    border-style: solid;
-    padding: 3em;
-     overflow-x: hidden;
-    overflow-y: auto;
+ 
+ 
+
+    margin: auto;
+    
+  
 }
  background: red;
 }
